# Comic-Organizer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  config-example.ini  config.ini  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yaml
.github/workflows/: code-analysis.yaml  publishing.yaml  testing.yaml  testing.yml  tox-testing.yaml  update-dependencies.yaml
ComicInfo/: __init__.py  __main__.py  comic_info.py  comicvine.py  league_of_comic_geeks.py  naming.py
Common/: __init__.py  comic_format.py  comic_genre.py  config.py  console.py  naming.py  utils.py
DexStarr/: __init__.py  __main__.py  comic_info.py  console.py  settings.py  utils.py
DexStarr/comic_archive/: __init__.py  zip_archive.py
DexStarr/comicvine_api/: __init__.py  comicvine_info.py  talker.py
DexStarr/league_of_comic_geeks_api/: __init__.py  league_info.py  session.py  talker.py
DexStarr/metron_api/: __init__.py  metron_info.py  talker.py
Organizer/: __init__.py  __main__.py  comic_format.py  comic_genre.py  comic_info.py  comicvine.py  comicvine_api.py  config.py  console.py  league_of_comic_geeks.py  league_of_comic_geeks_api.py  manual.py  metron_api.py  naming.py  settings.py  utils.py
Organizer/comic_archive/: __init__.py  tar_archive.py  zip_archive.py
Organizer/comicvine_api/: __init__.py  comicvine_info.py  talker.py
Organizer/data/: __init__.py  league_of_comic_geeks.py  metron.py
Organizer/league_of_comic_geeks_api/: __init__.py  league_info.py  talker.py
Organizer/metron_api/: __init__.py  metron_info.py  talker.py
dex_starr/: __init__.py  __main__.py  archive.py  comicvine.py  console.py  metadata.py  metron.py  settings.py
dex_starr/console/: __init__.py  console.py  prompt.py
dex_starr/league_of_comic_geeks_api/: __init__.py  league_of_comic_geeks.py  session.py
dex_starr/metadata/: __init__.py  comic_info.py  metadata.py  metron_info.py  utils.py
dex_starr/models/: __init__.py  utils.py
dex_starr/models/comic_info/: enums.py  schema.py
dex_starr/models/metadata/: enums.py  schema.py
dex_starr/models/metron_info/: enums.py  schema.py
dex_starr/schemas/: __init__.py  comic_info.py  metadata.py  metron_info.py  utils.py
dex_starr/schemas/comic_info/: __init__.py  enums.py  schema.py
dex_starr/schemas/metadata/: __init__.py  enums.py  schema.py
dex_starr/schemas/metron_info/: __init__.py  enums.py  schema.py
dex_starr/service/: __init__.py  comicvine.py  metron.py  mokkari.py  service.py  simyan.py
dex_starr/service/league_of_comic_geeks/: __init__.py  league_of_comic_geeks.py  response.py  session.py
dex_starr/service/league_of_comic_geeks_api/: league_of_comic_geeks.py  session.py
dex_starr/services/: __init__.py  comicvine.py  esak.py  exceptions.py  himon.py  league_of_comic_geeks.py  marvel.py  metron.py  mokkari.py  simyan.py  sqlite_cache.py
dex_starr/services/league_of_comic_geeks/: __init__.py  schemas.py  service.py  talker.py
schemas/: ComicInfo.schema.json  ComicInfo.schema.yaml  ComicInfo.xsd  Metadata.schema.json  Metadata.xsd  MetronInfo.xsd  README.md  Settings.schema.yaml
tests/: Comic-Organizer.sqlite  ComicInfo-Invalid-2.json  ComicInfo-Invalid-2.yaml  ComicInfo-Invalid-3.json  ComicInfo-Invalid-3.yaml  ComicInfo-Invalid.json  ComicInfo-Invalid.yaml  ComicInfo.json  ComicInfo.yaml  Metadata.json  conftest.py  from_comic_info.py  from_metadata.py  from_metron_info.py  generate_output.py  test_comicvine_api.py  test_comicvine_info.py  test_comicvine_talker.py  test_league_api.py  test_league_info.py  test_league_of_comic_geeks.py  test_league_talker.py  test_metron_api.py  test_metron_info.py  test_metron_talker.py  test_schemas.py  validators.py
tests/files/: ComicInfo.xml  Metadata.json  Metadata.xml  MetronInfo.xml
