[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["dex_starr"]

[tool.isort]
default_section = "THIRDPARTY"
line_length = 100
profile = "black"

[tool.poetry]
authors = ["BuriedInCode <BuriedInCode@tuta.io>"]
classifiers = [
	"Development Status :: 5 - Alpha",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Natural Language :: English",
	"Operating System :: MacOS",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Typing :: Typed"
]
description = "Unify and organize your comic collection."
include = [
	{ path = "tests", format = "sdist" }
]
keywords = ["comics", "comic", "metadata", "tagging", "tagger"]
license = "GPL-3.0-or-later"
maintainers = ["BuriedInCode <BuriedInCode@tuta.io>"]
name = "Dex-Starr"
packages = [
	{ include = "dex_starr" }
]
readme = "README.md"
repository = "https://github.com/Buried-In-Code/Dex-Starr"
version = "0.2.0"

[tool.poetry.dependencies]
esak = "^1.3.2"
himon = "^0.1.1"
mokkari = "^2.3.0"
pathvalidate = "^2.5.1"
patool = "^1.12"
py7zr = "^0.20.0"
pydantic = "^1.10.2"
python = "^3.8"
ratelimit = "^2.2.1"
requests = "^2.28.1"
rich = "^12.5.1"
"ruamel.yaml" = "^0.17.21"
simyan = "^0.11.0"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
tox = "^3.26.0"
tox-pyenv = "^1.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-include-markdown-plugin = "^3.7.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[tool.poetry.scripts]
Dex-Starr = "dex_starr.__main__:main"

[tool.pytest.ini_options]
addopts = ["--cov", "-x"]
