[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep >= 1.0.0"]

[project]
authors = [
  { name = "BuriedInCode", email = "BuriedInCode@tuta.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Typing :: Typed"
]
dependencies = [
    "esak >= 1.3.2",
    "himon >= 0.2.0",
    "mokkari >= 2.3.0",
    "pathvalidate >= 2.5.1",
    "patool >= 1.12",
    "pydantic >= 1.10.2",
    "ratelimit >= 2.2.1",
    "requests >= 2.28.1",
    "rich >= 12.6.0",
    "ruamel.yaml >= 0.17.21",
    "simyan >= 0.11.0",
    "xmltodict >= 0.13.0"
]
description = "Unify and organize your comic collection."
dynamic = ["version"]
keywords = ["comics", "comic", "metadata", "tagging", "tagger"]
license = {text = "GPL-3.0-or-later"}
name = "dex-starr"
readme = "README.md"
requires-python = ">= 3.7"

[project.optional-dependencies]
cb7 = [
    "py7zr >= 0.20.0"
]
dev = [
    "pre-commit >= 2.20.0"
]
docs = [
    "mkdocs >= 1.4.0",
    "mkdocs-include-markdown-plugin >= 3.9.0",
    "mkdocstrings[python] >= 0.19.0"
]
test = [
    "pytest >= 7.1.3",
    "pytest-cov >= 3.0.0",
    "tox >= 3.26.0",
    "tox-pyenv >= 1.1.0"
]

[project.scripts]
Dex-Starr = "dex_starr.__main__:main"

[project.urls]
Documentation = "https://github.com/Buried-In-Code/Dex-Starr#readme"
Homepage = "https://github.com/Buried-In-Code/Dex-Starr"
Issues = "https://github.com/Buried-In-Code/Dex-Starr/issues"
Source = "https://github.com/Buried-In-Code/Dex-Starr"

[tool.bandit]
recursive = true
skips = ["B101"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["dex_starr"]

[tool.isort]
default_section = "THIRDPARTY"
line_length = 100
profile = "black"

[tool.pdm]
version = {source = "file", path = "dex_starr/__init__.py"}

[tool.pytest.ini_options]
addopts = ["--cov", "-x"]
