[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { name = "BuriedInCode", email = "BuriedInCode@tuta.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]
dependencies = [
  "esak >= 1.3.2",
  "himon >= 0.2.1",
  "mokkari >= 2.3.3",
  "pathvalidate >= 2.5.2",
  "patool >= 1.12",
  "pydantic >= 1.10.2",
  "rich >= 12.6.0",
  "simyan >= 0.11.0",
  "tomli >= 2.0.1; python_version < \"3.11\"",
  "tomli-w >= 1.0.0",
  "xmltodict >= 0.13.0"
]
description = "Unify and organize your comic collection."
dynamic = ["version"]
keywords = ["comics", "comic", "metadata", "tagging", "tagger"]
license = "GPL-3.0-or-later"
name = "dex-starr"
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
cb7 = [
  "py7zr >= 0.20.2"
]
dev = [
  "pre-commit >= 2.20.0"
]
docs = [
  "mkdocs >= 1.4.2",
  "mkdocs-include-markdown-plugin >= 3.9.1",
  "mkdocstrings[python] >= 0.19.0"
]
test = [
  "lxml >= 4.9.1",
  "jsonschema >= 4.17.0",
  "pytest >= 7.2.0",
  "pytest-cov >= 4.0.0",
  "tox >= 3.27.1",
  "tox-pyenv >= 1.1.0"
]

[project.scripts]
Dex-Starr = "dex_starr.__main__:main"

[project.urls]
Documentation = "https://github.com/Buried-In-Code/Dex-Starr#readme"
Homepage = "https://pypi.org/project/Dex-Starr"
Issues = "https://github.com/Buried-In-Code/Dex-Starr/issues"
Source = "https://github.com/Buried-In-Code/Dex-Starr"

[tool.bandit]
recursive = true
skips = ["B101"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["dex_starr"]

[tool.hatch.version]
path = "dex_starr/__init__.py"

[tool.isort]
default_section = "THIRDPARTY"
line_length = 100
profile = "black"

[tool.pytest.ini_options]
addopts = ["--cov", "-x"]
